--- a/AccessTokenFunctionApp/scr/AccessTokenFunctionApp/AccessTokenFunctionApp.csproj
+++ b/AccessTokenFunctionApp/scr/AccessTokenFunctionApp/AccessTokenFunctionApp.csproj
@@ -4,6 +4,8 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
   </ItemGroup>
   <ItemGroup>
