--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -15,7 +15,7 @@ jobs:
 - template: apply-function-app-infrastructure-template.yml
   parameters:
     backendAzureRmContainerName: 'pat-tf-storage'
-    environmentServiceName: ${environmentServiceName}
+    environmentServiceName: 'Workload Identity Federation Connection'
     backendAzureRmResourceGroupName: ${devBackendAzureRmResourceGroupName}
     backendAzureRmStorageAccountName: ${devBackendAzureRmStorageAccountName}
     backendAzureRmKey: ${devBackendAzureRmKey}
