--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -12,10 +12,14 @@ variables:
 - group: shared-variable-group
 
 jobs:
+- job: foo
+  steps:
+  - script: echo ${environmentServiceName}
+
 - template: apply-function-app-infrastructure-template.yml
   parameters:
     backendAzureRmContainerName: 'pat-tf-storage'
-    environmentServiceName: ${environmentServiceName}
+    environmentServiceName: 'Workload Identity Federation Connection'
     backendAzureRmResourceGroupName: ${devBackendAzureRmResourceGroupName}
     backendAzureRmStorageAccountName: ${devBackendAzureRmStorageAccountName}
     backendAzureRmKey: ${devBackendAzureRmKey}
