Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -11,10 +11,10 @@ resources:
 variables:
 - group: shared-variable-group
 
-jobs:
-- job: foo
-  steps:
-  - script: echo $(environmentServiceName)
+# jobs:
+# - job: foo
+#   steps:
+#   - script: echo $(environmentServiceName)
 
 - template: apply-function-app-infrastructure-template.yml
   parameters:
