Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -11,7 +11,7 @@ resources:
 variables:
 - group: shared-variable-group
 
-# jobs:
+jobs:
 # - job: foo
 #   steps:
 #   - script: echo $(environmentServiceName)
