Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -12,12 +12,12 @@ variables:
 - group: shared-variable-group
 
 jobs:
-- job: foo
-  steps:
-  - script: echo $(environmentServiceName)
-  - script: echo $(devBackendAzureRmResourceGroupName)
-  - script: echo $(devBackendAzureRmStorageAccountName)
-  - script: echo $(devBackendAzureRmKey)
+# - job: foo
+#   steps:
+#   - script: echo $(environmentServiceName)
+#   - script: echo $(devBackendAzureRmResourceGroupName)
+#   - script: echo $(devBackendAzureRmStorageAccountName)
+#   - script: echo $(devBackendAzureRmKey)
 
 - template: apply-function-app-infrastructure-template.yml
   parameters:
