--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -13,7 +13,7 @@ variables:
 
 jobs:
 - job: foo
-  steps:
+  # steps:
 #   - script: echo $(environmentServiceName)
 #   - script: echo $(devBackendAzureRmResourceGroupName)
 #   - script: echo $(devBackendAzureRmStorageAccountName)
