--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -12,8 +12,8 @@ variables:
 - group: shared-variable-group
 
 jobs:
-- job: foo
-  # steps:
+# - job: foo
+#  steps:
 #   - script: echo $(environmentServiceName)
 #   - script: echo $(devBackendAzureRmResourceGroupName)
 #   - script: echo $(devBackendAzureRmStorageAccountName)
@@ -41,23 +41,23 @@ jobs:
 #       # azure blob file name
 #       backendAzureRmKey: infrax.tfstate
 
-# - template: apply-function-app-infrastructure-template.yml
-#   parameters:
-#     backendAzureRmContainerName: 'pat-tf-storage'
-#     environmentServiceName: $(environmentServiceName)
-#     backendAzureRmResourceGroupName: 'terraform-dev'
-#     backendAzureRmStorageAccountName: 'terraformdev8716912495'
-#     backendAzureRmKey: 'terraform-dev'
-#     planCommandOptions: '-var-file="Variables/dev.tfvars" -var "devops_organization_name=$(organizationName)"'
-
-- template: PipelineTemplates/Jobs/Terraform/terraform-apply-job.yml@templates
+- template: apply-function-app-infrastructure-template.yml
   parameters:
-    name: 'AccessTokenFunctionapp'
-    terraformWorkingDir: '$(System.DefaultWorkingDirectory)/infrastructure/Terraform'
     backendAzureRmContainerName: 'pat-tf-storage'
     environmentServiceName: 'Workload Identity Federation Connection'
     backendAzureRmResourceGroupName: 'terraform-dev'
     backendAzureRmResourceGroupLocation: 'uksouth'
     backendAzureRmStorageAccountName: 'terraformdev8716912495'
     planCommandOptions: '-var-file="Variables/dev.tfvars" -var "devops_organization_name=$(organizationName)"'
+
+# - template: PipelineTemplates/Jobs/Terraform/terraform-apply-job.yml@templates
+#   parameters:
+#     name: 'AccessTokenFunctionapp'
+#     terraformWorkingDir: '$(System.DefaultWorkingDirectory)/infrastructure/Terraform'
+#     backendAzureRmContainerName: 'pat-tf-storage'
+#     environmentServiceName: 'Workload Identity Federation Connection'
+#     backendAzureRmResourceGroupName: 'terraform-dev'
+#     backendAzureRmResourceGroupLocation: 'uksouth'
+#     backendAzureRmStorageAccountName: 'terraformdev8716912495'
+#     planCommandOptions: '-var-file="Variables/dev.tfvars" -var "devops_organization_name=$(organizationName)"'
 
