Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -18,6 +18,7 @@ variables:
 jobs:
 - job: 
   steps:
+  - script: echo $(System.DefaultWorkingDirectory)
   - checkout: self
   - checkout: modules
 - template: apply-function-app-infrastructure-template.yml
