Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -22,12 +22,12 @@ jobs:
   - checkout: self
   - checkout: modules
   - script: tree $(Agent.WorkFolder)\1 /f
-- template: apply-function-app-infrastructure-template.yml
-  parameters:
-    backendAzureRmContainerName: 'pat-tf-storage'
-    environmentServiceName: $(environmentServiceName)
-    backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
-    backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
-    backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
-    planCommandOptions: '-var-file="Variables/dev.tfvars" -var "devops_organization_name=$(organizationName)"'
+# - template: apply-function-app-infrastructure-template.yml
+#   parameters:
+#     backendAzureRmContainerName: 'pat-tf-storage'
+#     environmentServiceName: $(environmentServiceName)
+#     backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
+#     backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
+#     backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
+#     planCommandOptions: '-var-file="Variables/dev.tfvars" -var "devops_organization_name=$(organizationName)"'
 
