Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
   - script: echo $(System.DefaultWorkingDirectory)
   - checkout: self
   - checkout: modules
-  - script: tree $(Agent.WorkFolder)\1 /f
+  - script: tree $(System.DefaultWorkingDirectory) /f
 # - template: apply-function-app-infrastructure-template.yml
 #   parameters:
 #     backendAzureRmContainerName: 'pat-tf-storage'
