Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -18,10 +18,10 @@ variables:
 jobs:
 - job: 
   steps:
-  - script: echo $(System.DefaultWorkingDirectory)
+  #- script: echo $(System.DefaultWorkingDirectory)
   - checkout: self
   - checkout: modules
-  - script: tree $(System.DefaultWorkingDirectory) /f
+  - powershell: Get-ChildItem -Path $(System.DefaultWorkingDirectory) -recurse
 # - template: apply-function-app-infrastructure-template.yml
 #   parameters:
 #     backendAzureRmContainerName: 'pat-tf-storage'
