Update apply-dev-function-app-infrastructure-pipeline.yml for Azure Pipelines

--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -36,6 +36,7 @@ jobs:
       backendAzureRmStorageAccountSku: 'Standard_RAGRS'
       backendAzureRmContainerName: 'pat-tf-storage'
       allowTelemetryCollection: true
+      backendAzureRmKey: 'terraform.tfstate'
 
 # - template: apply-function-app-infrastructure-template.yml
 #   parameters:
