--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -2,15 +2,16 @@ trigger: none
 
 resources:
   repositories:
-    # - repository: templates
-    #   type: github
-    #   name: tumsky12/SharedInfrastructure
-    #   endpoint: GitHubConnection
-    #   ref:  'refs/heads/feature/terraform-pipeline-changes'
+    - repository: templates
+      type: github
+      name: tumsky12/CorePipelineTemplates
+      endpoint: GitHubConnection
+      ref:  'refs/heads/feature/terraform-pipeline-changes'
     - repository: modules
       type: github
       name: tumsky12/CoreTerraformModules
       endpoint: GitHubConnection
+      ref:  'refs/heads/feature/terraform-pipeline-changes'
 
 variables:
 - group: shared-variable-group
