--- a/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
+++ b/Pipelines/apply-dev-function-app-infrastructure-pipeline.yml
@@ -29,21 +29,21 @@ jobs:
   - checkout: modules
     path: $(coreTerraformModulesFolder)
   #- powershell: cd $(System.DefaultWorkingDirectory)/RenewDevopsPAT/Infrastructure/Terraform; Get-ChildItem -Path ../../.. -recurse
-  # - task: TerraformCLI@1
-  #   displayName: 'Terraform Init'
-  #   inputs:
-  #     command: init
-  #     backendType: azurerm
-  #     workingDirectory: $(System.DefaultWorkingDirectory)/${projectFolder}/Infrastructure/Terraform
-  #     backendServiceArm: $(environmentServiceName)
-  #     ensureBackend: true
-  #     backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
-  #     backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
-  #     backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
-  #     backendAzureRmStorageAccountSku: 'Standard_RAGRS'
-  #     backendAzureRmContainerName: 'pat-tf-storage'
-  #     allowTelemetryCollection: true
-  #     backendAzureRmKey: 'terraform.tfstate'
+  - task: TerraformCLI@1
+    displayName: 'Terraform Init'
+    inputs:
+      command: init
+      backendType: azurerm
+      workingDirectory: $(System.DefaultWorkingDirectory)/$(projectFolder)/Infrastructure/Terraform
+      backendServiceArm: $(environmentServiceName)
+      ensureBackend: true
+      backendAzureRmResourceGroupName: $(devBackendAzureRmResourceGroupName)
+      backendAzureRmResourceGroupLocation: $(backendAzureRmResourceGroupLocation)
+      backendAzureRmStorageAccountName: $(devBackendAzureRmStorageAccountName)
+      backendAzureRmStorageAccountSku: 'Standard_RAGRS'
+      backendAzureRmContainerName: 'pat-tf-storage'
+      allowTelemetryCollection: true
+      backendAzureRmKey: 'terraform.tfstate'
 
 # - template: apply-function-app-infrastructure-template.yml
 #   parameters:
